19th chapter started

--- a/19/19-2.md
+++ b/19/19-2.md
@@ -7,15 +7,27 @@ using std::string;
 using std::allocator; using std::uninitialized_copy;
 #include <utility>
 using std::pair;
-#include <initializer_list>
-using std::initializer_list;
+#include <algorithm>
+using std::for_each;
+#include <exception>
+using std::bad_alloc;
+#include <cstdlib>
+using std::malloc; using std::free;
+
+void *operator new(size_t size){
+    if (void *mem = malloc(size))
+        return mem;
+    else
+        throw bad_alloc();
+}
+
+void operator delete(void *mem) noexcept { free(mem);}
 
 //类vector类内存分配策略的简化实现
 class StrVec {
 public:
     StrVec() :    //allocator成员进行默认初始化
-        elements(nullptr), first_free(nullptr), cap(nullptr) {};
-    StrVec(initializer_list<string> ils);
+            elements(nullptr), first_free(nullptr), cap(nullptr) {};
     StrVec(const StrVec &);             //拷贝构造函数
     StrVec &operator=(const StrVec &);  //拷贝赋值运算符
     ~StrVec();                          //析构函数
@@ -63,8 +75,8 @@ void StrVec::free() {
     //不能传递给deallocate一个空指针，如果elements为空指针，函数什么也不做
     if (elements){
         //逆序销毁旧元素
-        for (auto p = first_free; p != elements;)
-            alloc.destroy(--p);
+        for_each(elements, first_free,
+                 [](string &p){alloc.destroy(&p);});
         alloc.deallocate(elements, cap - elements);
     }
 }
@@ -158,12 +170,6 @@ void StrVec::resize(const size_t &n) {
     }
 }
 
-inline
-StrVec::StrVec(initializer_list<string> ils) : StrVec() {
-    //使用委托构造函数首先默认初始化对象再push_back
-    for (const auto &il : ils)
-        push_back(il);
-}
 int main(){
     StrVec sv1;
     sv1.push_back("sv1");
