19th chapter finished

--- a/19/19-22.md
+++ b/19/19-22.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <string>
@@ -9,8 +10,6 @@ public:
     Token() : tok(INT), ival{0} {}
     Token(const Token &t) : tok(t.tok) { copyUnion(t); }    //拷贝构造函数
     Token &operator=(const Token &);        //拷贝赋值运算符
-    Token(const Token &&t) noexcept : tok(std::move(t.tok)) { copyUnion(t); }    //移动构造函数
-    Token &operator=(const Token &&) noexcept ;   //移动赋值运算符
     //如果union含有一个string成员，则我们必须销毁它
     ~Token() { if (tok == STR) sval.~string(); }
     //重载的赋值运算符负责设置union的不同成员
@@ -18,6 +17,7 @@ public:
     Token &operator=(char);
     Token &operator=(int);
     Token &operator=(double);
+    class Sales_data;
 private:
     enum {INT,CHAR, DBL, STR} tok;  //判别式
     union { //匿名union
@@ -28,6 +28,9 @@ private:
     };  //每个Token对象含有一个该未命名union类型的未命名成员
     //检查判别式，然后酌情拷贝union成员
     void copyUnion(const Token &);
+    Sales_data add(const Sales_data &, const Sales_data &);
+    static std::istream &read(std::istream &, Sales_data &);
+    std::ostream &print(std::ostream &, const Sales_data &);
 };
 
 Token& Token::operator=(int i) {
@@ -67,32 +70,60 @@ Token& Token::operator=(const Token &rhs) {
     return *this;
 }
 
-Token& Token::operator=(const Token &&rhs) noexcept {
-    if (this != &rhs){  //检测自赋值
-        //如果*this的值是string而rhs的值不是，必须释放原有的string
-        if (tok == STR && rhs.tok != STR) sval.~string();
-        //若二者都是string，可直接赋值
-        if (tok == STR && rhs.tok == STR)
-            sval = std::move(rhs.sval);
-        else
-            copyUnion(rhs); //*this->tok不是STR而rhs是，需要构造新的string
-        tok = std::move(rhs.tok);
+class Token::Sales_data {
+    friend class Token;
+    friend Sales_data add(const Sales_data &, const Sales_data &);
+    friend std::istream &read(std::istream &, Sales_data &);
+    friend std::ostream &print(std::ostream &, const Sales_data &);
+public:
+    Sales_data(): Sales_data(" ", 0, 0){}
+    Sales_data(double p):bookNo(" "), units_sold(0), revenue(0){};
+    Sales_data(const std::string &s):bookNo(s){};
+    Sales_data(const std::string &s, unsigned long n, double p):
+            bookNo(s), units_sold(n),revenue(p*n){};
+    //提供cin作为接受istream&参数的构造函数的默认实参
+    Sales_data(std::istream &is) {read(is, *this);}
+    std::string isbn() const {
+        return bookNo;
     }
+    Sales_data & combine(const Sales_data &a);
+    double avg_price() const {
+        if (units_sold)
+            return revenue / units_sold;
+        else
+            return 0;
+    };
+    operator std::string() const { return isbn();}
+    operator double() const { return revenue;}
+private:
+    std::string bookNo;
+    unsigned long units_sold = 0;
+    long double revenue = 0.0;
+};
+
+Token::Sales_data& Token::Sales_data::combine(const Sales_data &a) {
+    units_sold += a.units_sold;
+    revenue += a.revenue;
     return *this;
 }
 
-Token &Token::operator=(char c) {
-    if (tok == STR) sval.~string(); //如果当前存储的是string，释放它
-    cval = c;
-    tok = CHAR;
-    return *this;
+Token::Sales_data Token::add(const Token::Sales_data &asd, const Token::Sales_data &bsd) {
+    Sales_data tmpsum = asd;
+    tmpsum.combine(bsd);
+    return tmpsum;}
+
+std::istream &Token::read(std::istream &is, Token::Sales_data &item) {
+    double price;
+    is >> item.bookNo >> item.units_sold >> price;
+    item.revenue = item.units_sold * price;
+    return is;
 }
 
-Token &Token::operator=(double d) {
-    if (tok == STR) sval.~string(); //如果当前存储的是string，释放它
-    dval = d;
-    tok = DBL;
-    return *this;
+std::ostream &Token::print(std::ostream &os, const Token::Sales_data &item) {
+    os << item.isbn() << " " << item.units_sold << " " << item.revenue;
+    return os;
 }
 
 int main() {}
+```
+
